src/log/build_2024-11-12_19-15-52/navegacao_pkg/stdout_stderr.log
running egg_info
writing ../build/navegacao_pkg/navegacao_pkg.egg-info/PKG-INFO
writing dependency_links to ../build/navegacao_pkg/navegacao_pkg.egg-info/dependency_links.txt
writing entry points to ../build/navegacao_pkg/navegacao_pkg.egg-info/entry_points.txt
writing requirements to ../build/navegacao_pkg/navegacao_pkg.egg-info/requires.txt
writing top-level names to ../build/navegacao_pkg/navegacao_pkg.egg-info/top_level.txt
reading manifest file '../build/navegacao_pkg/navegacao_pkg.egg-info/SOURCES.txt'
writing manifest file '../build/navegacao_pkg/navegacao_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying navegacao_pkg/camera_node.py -> /home/atwork/caramelo_goiania/src/build/navegacao_pkg/build/lib/navegacao_pkg
running install
running install_lib
copying /home/atwork/caramelo_goiania/src/build/navegacao_pkg/build/lib/navegacao_pkg/camera_node.py -> /home/atwork/caramelo_goiania/src/install/navegacao_pkg/lib/python3.10/site-packages/navegacao_pkg
byte-compiling /home/atwork/caramelo_goiania/src/install/navegacao_pkg/lib/python3.10/site-packages/navegacao_pkg/camera_node.py to camera_node.cpython-310.pyc
running install_data
  File "/home/atwork/caramelo_goiania/src/install/navegacao_pkg/lib/python3.10/site-packages/navegacao_pkg/camera_node.py", line 39
    if colors[0][0] > 140 and colors[1][0] < 135 and color[0][0]
                                                                ^
SyntaxError: expected ':'

running install_egg_info
removing '/home/atwork/caramelo_goiania/src/install/navegacao_pkg/lib/python3.10/site-packages/navegacao_pkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../build/navegacao_pkg/navegacao_pkg.egg-info to /home/atwork/caramelo_goiania/src/install/navegacao_pkg/lib/python3.10/site-packages/navegacao_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing camera_node script to /home/atwork/caramelo_goiania/src/install/navegacao_pkg/lib/navegacao_pkg
Installing segue_linha script to /home/atwork/caramelo_goiania/src/install/navegacao_pkg/lib/navegacao_pkg
Installing serial_node_arduino script to /home/atwork/caramelo_goiania/src/install/navegacao_pkg/lib/navegacao_pkg
Installing serial_node_isaac script to /home/atwork/caramelo_goiania/src/install/navegacao_pkg/lib/navegacao_pkg
writing list of installed files to '/home/atwork/caramelo_goiania/src/build/navegacao_pkg/install.log'
